--- a/static/index.html
+++ b/static/index.html
@@ -22,6 +22,7 @@
             border: 2px solid black;
             background-color: white;
             border-radius: 0.5rem;
+            cursor: crosshair;
         }
 
         #controls {
@@ -35,6 +36,7 @@
             padding: 0.8rem;
             cursor: pointer;
             font-family: monospace;
+            font-size: 14px;
 
         }
 
@@ -42,12 +44,23 @@
             background-color: rgb(216, 21, 255);
             text-align: center;
             margin: auto;
+            font-size: 20px;
+            font-weight: 900;
         }
 
         #container {
             display: flex;
             justify-content: center;
             flex-direction: column;
+        }
+
+        h1 {
+            font-size: 32px;
+            color: white;
+            text-shadow: -1px -1px 0 #000,
+                1px -1px 0 #000,
+                -1px 1px 0 #000,
+                1px 1px 0 #000;
         }
     </style>
 
